syntax = "proto3";

option go_package = "github.com/NeverlandMJ/ToDo/user-service/v1/userpb";

package userpb;

service UserService {
    rpc SendCode(RequestPhone) returns (RequestPhone) {}
    rpc RegisterUser(Code) returns (ResponseUser) {}
    rpc SignIn(SignInUer) returns (User) {}
}

message RequestPhone {
    string Phone = 1;
}

message Code {
    string Phone = 1;
    string Code = 2;
}

message ResponseUser {
    string UserName = 1;
    string Password = 2;
}

message SignInUer {
    string UserName = 1;
    string Password = 2;
}

message User {
    string ID = 1;
    string UserName = 2;
    string Password = 3;
    string Phone = 4;
    string CreatedAt = 5;
    string UpdatedAt = 6;
    bool IsBlocked = 7;
}